# simple-client-server-cpp

./: .gitignore  CMakeLists.txt  README.md
Client/: README.txt  main.cpp
Server/: README.txt  main.cpp
